--- a/mqtt2db/Dockerfile
+++ b/mqtt2db/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:2.7
 
-ADD . /code
 WORKDIR /code
 
 RUN apt-get update
@@ -10,5 +9,9 @@ RUN pip install mysql
 RUN pip install MySQL-python
 RUN pip install mysql-connector-python
 RUN pip install paho-mqtt
+
+ADD . /code
+
+RUN pip install -r requirements.txt
 
 CMD ["python", "app.py"]
